--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body,
 html {
   height: 100%;
@@ -24,3 +28,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* body::-webkit-scrollbar {
+  width: 0px;
+} */
