--- a/app/landing/style/profile.css
+++ b/app/landing/style/profile.css
@@ -113,10 +113,10 @@
 }
 
 #intro-text .text {
-  opacity: 0;
-  filter: blur(5px);
-  transform: translate(0, 100%);
-  transition: all 600ms;
+  /* opacity: 20;
+  filter: blur(15px); */
+  /* transform: translate(0, 100%); */
+  /* transition: all 600ms; */
 }
 
 #intro-text .text.show {
