fe: projects pub

--- a/app/common/style/animation.css
+++ b/app/common/style/animation.css
@@ -15,7 +15,8 @@ html {
 }
 
 .slide-down-animation {
-  animation: slideDown 0.5s ease-out forwards;
+  animation: slideDown 1s forwards;
+  animation-delay: var(--delay);
   opacity: 0;
 }
 
@@ -33,6 +34,7 @@ html {
 
 .slide-up-animation {
   animation: slideUp 1s forwards;
+  animation-delay: var(--delay);
   opacity: 0;
   display: block;
 }
