--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,24 @@
   }
 }
 
+::-webkit-scrollbar {
+  background: transparent;
+  display: block;
+  width: 0.425em;
+}
+
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-button {
+  display: none;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  background: #2525259a;
+  border-radius: 1em;
+  outline: none;
+}
+
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
