반응형 900이상 대응

--- a/app/common/style/animation.css
+++ b/app/common/style/animation.css
@@ -15,7 +15,7 @@ html {
 }
 
 .slide-down-animation {
-  animation: slideDown 1s forwards;
+  animation: slideDown var(--duration, 1s) forwards;
   animation-delay: var(--delay);
   opacity: 0;
 }
@@ -33,7 +33,7 @@ html {
 }
 
 .slide-up-animation {
-  animation: slideUp 1s forwards;
+  animation: slideUp var(--duration, 1s) forwards;
   animation-delay: var(--delay);
   opacity: 0;
   display: block;
